@@ -1,6 +1,9 @@
 2005-05-20  Sam Steingold  <sds@gnu.org>
 
 	* modules/rawsock/sock.lisp (SOCKET-OPTION): simplified DEFSETF
+	* modules/syscalls/calls.c (SET-PRIORITY): made value the first
+	argument, it is easier to return it this way
+	* modules/syscalls/posix.lisp (PRIORITY): updated DEFSETF
 
 2005-05-20  Bruno Haible  <bruno@clisp.org>
 
